--- a/main.css
+++ b/main.css
@@ -22,5 +22,41 @@ body {
 }
 
 img {
-    padding-left: 45%;
-}*/
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+}
+
+form {
+    background-color: skyblue;
+    display: block;
+    border-radius: 0.35em;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 40px;
+   padding: 20px; 
+}
+
+form > input {
+    display: block;
+    width: 90%;
+    padding: 3px;
+    border: 40px;
+    margin-left: 5%;
+    border-radius: 0.35em;
+    
+    margin-bottom:  0%;
+}
+
+form > label {
+    margin-left: 40px;
+    margin-top: 0px;
+}
+
+form > button {
+    margin: 5%;
+    border-radius: 0.35em;
+    color: white;
+    background-color: green; 
+}
