--- a/main.css
+++ b/main.css
@@ -32,9 +32,9 @@ form {
     background-color: skyblue;
     display: block;
     border-radius: 0.35em;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-bottom: 40px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
    padding: 20px; 
 }
 
